libs/preprocessor/tests/errors/pe17_double_else/stderr.ansi
[31m[PE17] Error:[0m multiple `#else` directives found in a single `#if`
    [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m/source.hpp:12:2[38;5;246m][0m
    [38;5;246m│[0m
 [38;5;246m 8 │[0m [38;5;249m#[0m[38;5;187mi[0m[38;5;187mf[0m[38;5;249m [0m[38;5;249mt[0m[38;5;249me[0m[38;5;249ms[0m[38;5;249mt[0m
 [38;5;240m   │[0m  [38;5;187m─[0m[38;5;187m┬[0m  
 [38;5;240m   │[0m   [38;5;187m╰[0m[38;5;187m─[0m[38;5;187m─[0m `[38;5;187m#if[0m` directive
 [38;5;240m   │[0m 
 [38;5;246m10 │[0m [38;5;249m#[0m[38;5;155me[0m[38;5;155ml[0m[38;5;155ms[0m[38;5;155me[0m
 [38;5;240m   │[0m  [38;5;155m─[0m[38;5;155m─[0m[38;5;155m┬[0m[38;5;155m─[0m  
 [38;5;240m   │[0m    [38;5;155m╰[0m[38;5;155m─[0m[38;5;155m─[0m[38;5;155m─[0m first `[38;5;155m#else[0m` directive
 [38;5;240m   │[0m 
 [38;5;246m12 │[0m [38;5;249m#[0m[38;5;201me[0m[38;5;201ml[0m[38;5;201ms[0m[38;5;201me[0m
 [38;5;240m   │[0m  [38;5;201m─[0m[38;5;201m─[0m[38;5;201m┬[0m[38;5;201m─[0m  
 [38;5;240m   │[0m    [38;5;201m╰[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m second `[38;5;201m#else[0m` directive
[38;5;246m────╯[0m
